# RsCat

./: .gitignore  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml  release.yml
crates/rscat-core/: Cargo.toml
crates/rscat-core/src/: animation.rs  assets.rs  lib.rs  metrics.rs  settings.rs  startup.rs
crates/rscat-tray/: Cargo.toml
crates/rscat-tray/src/: main.rs  tray.rs
crates/rscat-ui/: Cargo.toml
crates/rscat-ui/src/: lib.rs
